# cs

lpthw/exercise 5/: D.txt
lpthw/exercise6/: README  find.py  findDuplicates.py
lpthw/exercise7/: README.txt
lpthw/exercise8/: text.txt
lpthw/exercise9/: foo.txt  sed.py
sprint1/: README.rst  pyproject.toml
sprint1/sprint1/: cityreader.py  comp.py  oop1.py  oop2.py  test_comp.py
sprint1/sprint1.egg-info/: PKG-INFO  SOURCES.txt
